Fix itinerary button extending past container borders on small screen width

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -39,5 +39,7 @@ img {
 }
 
 .button-rect {
-   width: 200px; 
+   min-width: 100px;
+   width: 190px;
+   letter-spacing: .08em;
 }
